crates/plotnik-lib/src/emit/snapshots/plotnik_lib__emit__emit_tests__captures_deeply_nested.snap
---
source: crates/plotnik-lib/src/emit/emit_tests.rs
---
Test = (a (b (c (d) @d) @c) @b) @a
---
[flags]
linked = false

[strings]
S0 "Beauty will save the world"
S1 "a"
S2 "b"
S3 "c"
S4 "d"
S5 "Test"

[type_defs]
T0 = <Node>
T1 = Struct  M0:4  ; { a, b, c, d }
T2 = Struct  M4:1  ; { d }
T3 = Struct  M5:2  ; { c, d }
T4 = Struct  M7:3  ; { b, c, d }

[type_members]
M0: S1 → T0  ; a: <Node>
M1: S2 → T0  ; b: <Node>
M2: S3 → T0  ; c: <Node>
M3: S4 → T0  ; d: <Node>
M4: S4 → T0  ; d: <Node>
M5: S3 → T0  ; c: <Node>
M6: S4 → T0  ; d: <Node>
M7: S2 → T0  ; b: <Node>
M8: S3 → T0  ; c: <Node>
M9: S4 → T0  ; d: <Node>

[type_names]
N0: S5 → T1  ; Test

[entrypoints]
Test = 06 :: T1

[transitions]
_ObjWrap:
  00   ε   [Obj]                            02
  02       Trampoline                       03
  03   ε   [EndObj]                         05
  05                                        ▶

Test:
  06   ε                                    07
  07   !   (a) [Node Set(M0)]               09
  09   ▽   (b) [Node Set(M1)]               11
  11   ▽   (c) [Node Set(M2)]               13
  13   ▽   (d) [Node Set(M3)]               15
  15   △   _                                16
  16   △   _                                17
  17   △   _                                18
  18                                        ▶
