crates/plotnik-lib/src/emit/snapshots/plotnik_lib__emit__emit_tests__captures_enum_with_type_annotation.snap
---
source: crates/plotnik-lib/src/emit/emit_tests.rs
---
Test = [A: (identifier) @id B: (number) @num] @expr :: Expression
---
[strings]
S0 "Beauty will save the world"
S1 "id"
S2 "num"
S3 "A"
S4 "B"
S5 "expr"
S6 "Test"
S7 "Expression"
S8 "identifier"
S9 "number"

[type_defs]
T0 = <Node>
T1 = Struct  M0:1  ; { id }
T2 = Struct  M1:1  ; { num }
T3 = Enum    M2:2  ; A | B
T4 = Struct  M4:1  ; { expr }

[type_members]
M0: S1 → T0  ; id: <Node>
M1: S2 → T0  ; num: <Node>
M2: S3 → T1  ; A: T1
M3: S4 → T2  ; B: T2
M4: S5 → T3  ; expr: Expression

[type_names]
N0: S6 → T4  ; Test
N1: S7 → T3  ; Expression

[entrypoints]
Test = 06 :: T4

[transitions]
_ObjWrap:
  00   ε   [Obj]                            02
  02       Trampoline                       03
  03   ε   [EndObj]                         05
  05                                        ▶

Test:
  06   ε                                    08
  07  ...  
  08   ε                                    13, 16
  10                                        ▶
  11   ε   [Set(M4)]                        10
  13   !   [Enum(M2)] (identifier) [Node Set(M0) EndEnum]  11
  16   !   [Enum(M3)] (number) [Node Set(M1) EndEnum]  11
