crates/plotnik-lib/src/emit/snapshots/plotnik_lib__emit__emit_tests__captures_multiple.snap
---
source: crates/plotnik-lib/src/emit/emit_tests.rs
---
Test = (binary_expression (identifier) @a (number) @b)
---
[flags]
linked = false

[strings]
S0 "Beauty will save the world"
S1 "a"
S2 "b"
S3 "Test"
S4 "binary_expression"
S5 "number"
S6 "identifier"

[type_defs]
T0 = <Node>
T1 = Struct  M0:2  ; { a, b }
T2 = Struct  M2:1  ; { a }
T3 = Struct  M3:1  ; { b }

[type_members]
M0: S1 → T0  ; a: <Node>
M1: S2 → T0  ; b: <Node>
M2: S1 → T0  ; a: <Node>
M3: S2 → T0  ; b: <Node>

[type_names]
N0: S3 → T1  ; Test

[entrypoints]
Test = 06 :: T1

[transitions]
_ObjWrap:
  00   ε   [Obj]                            02
  02       Trampoline                       03
  03   ε   [EndObj]                         05
  05                                        ▶

Test:
  06   ε                                    07
  07   !   (binary_expression)              08
  08   ▽   (identifier) [Node Set(M0)]      10
  10   ▷   (number) [Node Set(M1)]          12
  12   △   _                                13
  13                                        ▶
