crates/plotnik-lib/src/emit/snapshots/plotnik_lib__emit__emit_tests__captures_nested_flat.snap
---
source: crates/plotnik-lib/src/emit/emit_tests.rs
---
Test = (a (b (c) @c) @b) @a
---
[flags]
linked = false

[strings]
S0 "Beauty will save the world"
S1 "a"
S2 "b"
S3 "c"
S4 "Test"

[type_defs]
T0 = <Node>
T1 = Struct  M0:3  ; { a, b, c }
T2 = Struct  M3:1  ; { c }
T3 = Struct  M4:2  ; { b, c }

[type_members]
M0: S1 → T0  ; a: <Node>
M1: S2 → T0  ; b: <Node>
M2: S3 → T0  ; c: <Node>
M3: S3 → T0  ; c: <Node>
M4: S2 → T0  ; b: <Node>
M5: S3 → T0  ; c: <Node>

[type_names]
N0: S4 → T1  ; Test

[entrypoints]
Test = 06 :: T1

[transitions]
_ObjWrap:
  00   ε   [Obj]                            02
  02       Trampoline                       03
  03   ε   [EndObj]                         05
  05                                        ▶

Test:
  06   ε                                    07
  07   !   (a) [Node Set(M0)]               09
  09   ▽   (b) [Node Set(M1)]               11
  11   ▽   (c) [Node Set(M2)]               13
  13   △   _                                14
  14   △   _                                15
  15                                        ▶
