crates/plotnik-lib/src/emit/snapshots/plotnik_lib__emit__emit_tests__captures_with_type_custom.snap
---
source: crates/plotnik-lib/src/emit/emit_tests.rs
---
Test = (identifier) @name :: Identifier
---
[strings]
S0 "Beauty will save the world"
S1 "Identifier"
S2 "name"
S3 "Test"
S4 "identifier"

[type_defs]
T0 = <Node>
T1 = Alias(T0)
T2 = Struct  M0:1  ; { name }

[type_members]
M0: S2 → T1  ; name: Identifier

[type_names]
N0: S1 → T1  ; Identifier
N1: S3 → T2  ; Test

[entrypoints]
Test = 06 :: T2

[transitions]
_ObjWrap:
  00   ε   [Obj]                            02
  02       Trampoline                       03
  03   ε   [EndObj]                         05
  05                                        ▶

Test:
  06   ε                                    08
  07  ...  
  08   !   (identifier) [Node Set(M0)]      10
  10                                        ▶
